# htmx-test

./: app.py  pyproject.toml
flaskr/templates/layouts/: main.html
templates/layouts/: main.html
