[tool.poetry]
name = "htmx-test"
version = "0.1.0"
description = ""
authors = ["Jens Pfeifle <jens.pfeifle@rommelag.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
uvicorn = {extras = ["standard"], version = "^0.16.0"}
Jinja2 = "^3.0.3"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
mypy = "^0.920"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
